# Media-Viewer

./: CMakeLists.txt  README.md  requirements.txt
src/: browser.cpp  browser.hpp  controls.cpp  controls.hpp  media.cpp  media.hpp  mplayer.cpp  mplayer.hpp  windows.cpp
